pushed all changes including experimental model and over/undersampling model

--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -33659,7 +33659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -33705,7 +33705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -33714,7 +33714,7 @@
        "'\\nMEL: Melanoma\\nNV: Melanocytic nevus\\nBCC: Basal cell carcinoma\\nAK: Actinic keratosis\\nBKL: Benign keratosis (solar lentigo / seborrheic keratosis / lichen planus-like keratosis)\\nDF: Dermatofibroma\\nVASC: Vascular lesion\\nSCC: Squamous cell carcinoma\\nUNK: None of the above\\n'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33735,7 +33735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -33744,7 +33744,7 @@
        "'\\nEnglish\\nMEL: Cancerous cells, what we are trying to detect\\nNV: mole on the skin, not cancerous\\n    - round, flat/raised, brown or black spots on the skin with smooth edges\\nBCC: type of skin cancer, not melanoma\\n    - rolled edges, pearly appearance, and visible blood vessels\\nAK: pre-cancerous skin condition, not melanoma\\n    - rough, scaly patches on sun-exposed skin\\nBKL: benign skin lesions/skin growth, not cancerous\\n    - brown or black spots on the skin, often with irregular borders\\nDF: firm skin bumps, not cancerous\\n    - small, raised, and firm nodules that are usually brown or skin-colored\\nVASC: abnormal malformation of blood vessels, not cancerous\\n    - red or purple lesions on the skin, often with a raised appearance\\nSCC: type of skin cancer, not melanoma\\n    - scaly, crusted patches or open sores that do not heal\\nUNK: unc status\\n'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33773,14 +33773,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "362\n"
+      "25332\n"
      ]
     }
    ],
@@ -33790,7 +33790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -33833,7 +33833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -33918,7 +33918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33985,28 +33985,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output directory already exists, deleting\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[33], line 43\u001b[0m\n\u001b[0;32m     38\u001b[0m         cv2\u001b[38;5;241m.\u001b[39mimwrite(output_path, preprocessed_image)\n\u001b[0;32m     40\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTotal Preprocessed: \u001b[39m\u001b[38;5;124m\"\u001b[39m, i)\n\u001b[1;32m---> 43\u001b[0m \u001b[43mpreprocess_all_images\u001b[49m\u001b[43m(\u001b[49m\u001b[43mundersampled_filenames\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m../preprocessed_images\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[33], line 36\u001b[0m, in \u001b[0;36mpreprocess_all_images\u001b[1;34m(image_list, output_dir)\u001b[0m\n\u001b[0;32m     34\u001b[0m image_name \u001b[38;5;241m=\u001b[39m image_list[image_name]\n\u001b[0;32m     35\u001b[0m image_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(training_path, image_name)\n\u001b[1;32m---> 36\u001b[0m preprocessed_image \u001b[38;5;241m=\u001b[39m \u001b[43mpreprocessing\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     37\u001b[0m output_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(output_dir, image_name)\n\u001b[0;32m     38\u001b[0m cv2\u001b[38;5;241m.\u001b[39mimwrite(output_path, preprocessed_image)\n",
-      "Cell \u001b[1;32mIn[33], line 7\u001b[0m, in \u001b[0;36mpreprocessing\u001b[1;34m(image)\u001b[0m\n\u001b[0;32m      5\u001b[0m image \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mcvtColor(image, cv2\u001b[38;5;241m.\u001b[39mCOLOR_BGR2RGB)\n\u001b[0;32m      6\u001b[0m gray \u001b[38;5;241m=\u001b[39m convert_to_grayscale(image)\n\u001b[1;32m----> 7\u001b[0m hair_remove \u001b[38;5;241m=\u001b[39m \u001b[43mremove_hair\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgray\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      8\u001b[0m noise_reduced \u001b[38;5;241m=\u001b[39m reduce_noise(hair_remove)\n\u001b[0;32m     10\u001b[0m contrast \u001b[38;5;241m=\u001b[39m enhance_contrast(noise_reduced)\n",
-      "Cell \u001b[1;32mIn[32], line 12\u001b[0m, in \u001b[0;36mremove_hair\u001b[1;34m(img)\u001b[0m\n\u001b[0;32m     10\u001b[0m ret,mask \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mthreshold(bhg,\u001b[38;5;241m10\u001b[39m,\u001b[38;5;241m255\u001b[39m,cv2\u001b[38;5;241m.\u001b[39mTHRESH_BINARY)\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m#Replace pixels of the mask\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m dst \u001b[38;5;241m=\u001b[39m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minpaint\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg\u001b[49m\u001b[43m,\u001b[49m\u001b[43mmask\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m7\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mINPAINT_TELEA\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# plt.imshow(dst)\u001b[39;00m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m# plt.show\u001b[39;00m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m dst\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "Creating output directory\n",
+      "Preprocessing image 1000/14517\n",
+      "Preprocessing image 2000/14517\n",
+      "Preprocessing image 3000/14517\n",
+      "Preprocessing image 4000/14517\n",
+      "Preprocessing image 5000/14517\n",
+      "Preprocessing image 6000/14517\n",
+      "Preprocessing image 7000/14517\n",
+      "Preprocessing image 8000/14517\n",
+      "Preprocessing image 9000/14517\n",
+      "Preprocessing image 10000/14517\n",
+      "Preprocessing image 11000/14517\n",
+      "Preprocessing image 12000/14517\n",
+      "Preprocessing image 13000/14517\n",
+      "Preprocessing image 14000/14517\n",
+      "Total Preprocessed:  14517\n"
      ]
     }
    ],
@@ -34058,7 +34059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -34092,7 +34093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -34101,7 +34102,7 @@
        "'UNDERSAMPLING OLD ALGORITHM --> NEW ONE IS BEFORE PREPROCESSING\\n# Simple random undersampling to achieve desired balance\\n# random_state HH 88\\ndef undersample_data(df, majority_split, new_labels_path):\\n    majority = df[df[\"MEL\"] == 0]\\n    minority = df[df[\"MEL\"] == 1]\\n    # Calculate size\\n    # major_count = majority.shape[0]\\n    minor_count = minority.shape[0]\\n    size = int(minor_count // (1 - majority_split)) - minor_count\\n    majority_undersampled = resample(majority,\\n                                    replace=False,\\n                                    n_samples=size,\\n                                    random_state=88)\\n    df_undersampled = pd.concat([majority_undersampled, minority])\\n    df_ordered = df_undersampled.sort_values(by=\"image\").reset_index(drop=True)\\n    # print(df_ordered[df_ordered[\"MEL\"] == 0].shape[0])\\n    # print(df_ordered[df_ordered[\"MEL\"] == 1].shape[0])\\n    df_ordered.to_csv(new_labels_path, index=False)\\n    #print(len(df_ordered))\\nmajority_split = 0.5 # XX% majority (Non-Melanoma), XX% minority (Melanoma)\\nundersample_data(df_train_labels_updated, majority_split, \"../preprocessed_images/ISIC_2019_Training_GroundTruth_preprocessed.csv\")\\n'"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34134,7 +34135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -34142,9 +34143,7 @@
      "output_type": "stream",
      "text": [
       "Size before : (14517, 2)\n",
-      "Total mel: 4522\n",
-      "New labels:  4522\n",
-      "Size after : (19039, 2)\n"
+      "Size after : (14517, 2)\n"
      ]
     }
    ],
