cleaned up all code for pr

--- a/model_training/model_testing_best.ipynb
+++ b/model_training/model_testing_best.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6bfd20ad",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,6 @@
     "    data = []\n",
     "    for filename in os.listdir(path):\n",
     "        if filename.endswith(\".jpg\"):\n",
-    "            # print(filename)\n",
     "            data.append(filename)\n",
     "    return data\n",
     "\n",
@@ -63,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1d9f130b",
    "metadata": {},
    "outputs": [
@@ -92,12 +91,9 @@
     "print(\"Training labels preview:\")\n",
     "print(df.head())\n",
     "\n",
-    "\n",
-    "# Peek of MEL column and NON-MEL values\n",
     "melanoma_count = df[df[\"MEL\"] == 1].shape[0]\n",
     "non_melanoma_count = df[df[\"MEL\"] == 0].shape[0]\n",
     "\n",
-    "# Printing the counts\n",
     "print(f\"Melanoma images: {melanoma_count}\")\n",
     "print(f\"Non-Melanoma images: {non_melanoma_count}\")\n",
     "\n",
@@ -107,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9a517c31",
    "metadata": {},
    "outputs": [],
@@ -115,17 +111,15 @@
     "'''FILTERING IMAGES'''\n",
     "# Hair removal\n",
     "def remove_hair(img):\n",
-    "    #Black hat filter\n",
     "    kernel = cv2.getStructuringElement(cv2.MORPH_RECT,(7,17))\n",
     "    blackhat = cv2.morphologyEx(img, cv2.MORPH_BLACKHAT, kernel)\n",
-    "    #Gaussian filter\n",
+    "    \n",
     "    bhg= cv2.GaussianBlur(blackhat,(3,3),cv2.BORDER_DEFAULT)\n",
-    "    #Binary thresholding (MASK)\n",
+    "    \n",
     "    ret,mask = cv2.threshold(bhg,10,255,cv2.THRESH_BINARY)\n",
-    "    #Replace pixels of the mask\n",
+    "    \n",
     "    dst = cv2.inpaint(img,mask,7,cv2.INPAINT_TELEA)\n",
-    "    # plt.imshow(dst)\n",
-    "    # plt.show\n",
+    "    \n",
     "    return dst\n",
     "    \n",
     "# Gray scale\n",
@@ -147,35 +141,12 @@
     "def resize_img(img, size=(224, 224)):\n",
     "    resized_img = cv2.resize(img, size)\n",
     "    return resized_img\n",
-    "\n",
-    "# Other filters (need to debug)\n",
-    "\n",
-    "# Edge detection\n",
-    "def segment_lesion(image):\n",
-    "        \n",
-    "    #https://docs.opencv.org/4.x/d7/d4d/tutorial_py_thresholding.html \n",
-    "    # look at Otsu binarization; very nice\n",
-    "    _, thresh = cv2.threshold(image, 0, 255, cv2.THRESH_BINARY_INV + cv2.THRESH_OTSU)\n",
-    "    \n",
-    "    kernel = np.ones((5,5), np.uint8)\n",
-    "    mask = cv2.morphologyEx(thresh, cv2.MORPH_CLOSE, kernel)\n",
-    "    mask = cv2.morphologyEx(mask, cv2.MORPH_OPEN, kernel)\n",
-    "    return mask\n",
-    "\n",
-    "def enhance_borders(image):\n",
-    "\n",
-    "    # https://docs.opencv.org/4.x/d2/d2c/tutorial_sobel_derivatives.html\n",
-    "    sobelx = cv2.Sobel(image, cv2.CV_64F, 1, 0, ksize=3)\n",
-    "    sobely = cv2.Sobel(image, cv2.CV_64F, 0, 1, ksize=3)\n",
-    "    gradient = np.sqrt(sobelx**2 + sobely**2)\n",
-    "    \n",
-    "    gradient = np.uint8(gradient * 255 / gradient.max())\n",
-    "    return gradient\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "bfccac18",
    "metadata": {},
    "outputs": [
@@ -208,43 +179,30 @@
     "    \n",
     "    contrast = enhance_contrast(noise_reduced)\n",
     "\n",
-    "    # Very wonky things happen depending on specific images when trying to get specific borders\n",
-    "    #mask = segment_lesion(image)   \n",
-    "    # borders = enhance_borders(noise_reduced)\n",
-    "    #final = cv2.bitwise_and(contrast, contrast, mask=mask)\n",
-    "\n",
     "    resized = cv2.resize(contrast, (224,224))\n",
     "    return resized\n",
     "\n",
     "def preprocess_all_images(image_list, output_dir):\n",
     "    if not os.path.exists(output_dir):\n",
-    "        print(\"Creating output directory\")\n",
     "        os.makedirs(output_dir)\n",
     "    elif os.path.exists(output_dir):\n",
-    "        print(\"Output directory already exists, deleting\")\n",
     "        shutil.rmtree(output_dir)\n",
     "        os.makedirs(output_dir)\n",
     "    \n",
-    "    i = 0\n",
-    "    for image_name in range(len(image_list)): # <------------------- Change for full dataset len(image_list)\n",
-    "        i += 1\n",
-    "        if i % 1000 == 0:\n",
-    "            print(f\"Preprocessing image {i}/{len(image_list)}\")\n",
+    "    for image_name in range(len(image_list)): \n",
+    "\n",
     "        image_name = image_list[image_name]\n",
     "        image_path = os.path.join(testing_path, image_name)\n",
     "        preprocessed_image = preprocessing(image_path)\n",
     "        output_path = os.path.join(output_dir, image_name)\n",
     "        cv2.imwrite(output_path, preprocessed_image)\n",
     "        \n",
-    "    print(\"Total Preprocessed: \", i)\n",
-    "\n",
-    "\n",
     "preprocess_all_images(testing_data, \"../testing_preprocessed_images\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "da3b2778",
    "metadata": {},
    "outputs": [
@@ -267,7 +225,7 @@
     "\n",
     "def update_labels(labels_path):\n",
     "    df = pd.read_csv(labels_path)\n",
-    "    df = df[['image', 'MEL']] # Drop other columns\n",
+    "    df = df[['image', 'MEL']]\n",
     "    df.to_csv(labels_path, index=False)\n",
     "    return df\n",
     "\n",
@@ -279,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "cbab3dd6",
    "metadata": {},
    "outputs": [],
@@ -287,7 +245,6 @@
     "'''CONVERTING IMAGES TO ARRAYS FOR MODEL'''\n",
     "\n",
     "def load_process_images(image_path):\n",
-    "    # image_path += \".jpg\"\n",
     "    img = load_img(image_path)\n",
     "    img_array = img_to_array(img)\n",
     "\n",
@@ -351,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "420fcc61",
    "metadata": {},
    "outputs": [
@@ -399,7 +356,6 @@
     "'''EVALUATING MODEL ON TESTING DATA'''\n",
     "\n",
     "model_path = \"../melanoma_combo_model.keras\"\n",
-    "# model_path = \"../melanoma_undersample_model.keras\"\n",
     "model = tf.keras.models.load_model(model_path)\n",
     "print(\"Model loaded\")\n",
     "\n",
@@ -448,7 +404,6 @@
     "\n",
     "X_test, y_test = get_all_data(testing_data, df_test_labels_updated, \"../testing_preprocessed_images\")\n",
     "\n",
-    "# evaluate_model(model, X_test, y_test, \"Undersample\")\n",
     "evaluate_model(model, X_test, y_test, \"Over/Undersample\")"
    ]
   }
