--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,27 +13,12 @@
     "import cv2\n",
     "\n",
     "from sklearn.utils import resample\n",
-    "import albumentations as A\n",
-    "\n"
+    "import albumentations as A"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Current Issues:\n",
-    "\n",
-    "# 2. Add a combination of both oversampling and undersampling (WIP)\n",
-    "\n",
-    "# 4. Start creating the model and training it (WIP) current accuracy: 81\n",
-    "# 5. Sleep "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -33619,16 +33604,6 @@
     }
    ],
    "source": [
-    "# -isic_2019\n",
-    "#   -ISIC_2019_Training_Input\n",
-    "#       -ISIC_2019_Training_GroundTruth.csv\n",
-    "#       -ISIC_2019_Training_Input\n",
-    "#           -images\n",
-    "#   -ISIC_2019_Test_Input\n",
-    "#       -ISIC_2019_Test_GroundTruth.csv\n",
-    "#       -ISIC_2019_Test_Input\n",
-    "#           -images\n",
-    "\n",
     "training_path = \"../isic_2019/ISIC_2019_Training_Input/ISIC_2019_Training_Input\"\n",
     "testing_path = \"../isic_2019/ISIC_2019_Test_Input/ISIC_2019_Test_Input\"\n",
     "\n",
@@ -33636,15 +33611,13 @@
     "testing_labels_path = \"../isic_2019/ISIC_2019_Test_Input/ISIC_2019_Test_GroundTruth.csv\"\n",
     "\n",
     "training_labels = pd.read_csv(training_labels_path)\n",
-    "print(\"Found training labels\")\n",
     "testing_labels = pd.read_csv(testing_labels_path)\n",
-    "print(\"Found testing labels\")\n",
+    "\n",
     "\n",
     "def load_data(path):\n",
     "    data = []\n",
     "    for filename in os.listdir(path):\n",
     "        if filename.endswith(\".jpg\"):\n",
-    "            print(filename)\n",
     "            data.append(filename)\n",
     "    return data\n",
     "\n",
@@ -33701,74 +33674,6 @@
     "\n",
     "# Get overall class distribution\n",
     "print(df[\"MEL\"].value_counts(normalize=True) * 100)  # Shows % distribution\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nMEL: Melanoma\\nNV: Melanocytic nevus\\nBCC: Basal cell carcinoma\\nAK: Actinic keratosis\\nBKL: Benign keratosis (solar lentigo / seborrheic keratosis / lichen planus-like keratosis)\\nDF: Dermatofibroma\\nVASC: Vascular lesion\\nSCC: Squamous cell carcinoma\\nUNK: None of the above\\n'"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''\n",
-    "MEL: Melanoma\n",
-    "NV: Melanocytic nevus\n",
-    "BCC: Basal cell carcinoma\n",
-    "AK: Actinic keratosis\n",
-    "BKL: Benign keratosis (solar lentigo / seborrheic keratosis / lichen planus-like keratosis)\n",
-    "DF: Dermatofibroma\n",
-    "VASC: Vascular lesion\n",
-    "SCC: Squamous cell carcinoma\n",
-    "UNK: None of the above\n",
-    "'''\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nEnglish\\nMEL: Cancerous cells, what we are trying to detect\\nNV: mole on the skin, not cancerous\\n    - round, flat/raised, brown or black spots on the skin with smooth edges\\nBCC: type of skin cancer, not melanoma\\n    - rolled edges, pearly appearance, and visible blood vessels\\nAK: pre-cancerous skin condition, not melanoma\\n    - rough, scaly patches on sun-exposed skin\\nBKL: benign skin lesions/skin growth, not cancerous\\n    - brown or black spots on the skin, often with irregular borders\\nDF: firm skin bumps, not cancerous\\n    - small, raised, and firm nodules that are usually brown or skin-colored\\nVASC: abnormal malformation of blood vessels, not cancerous\\n    - red or purple lesions on the skin, often with a raised appearance\\nSCC: type of skin cancer, not melanoma\\n    - scaly, crusted patches or open sores that do not heal\\nUNK: unc status\\n'"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''\n",
-    "English\n",
-    "MEL: Cancerous cells, what we are trying to detect\n",
-    "NV: mole on the skin, not cancerous\n",
-    "    - round, flat/raised, brown or black spots on the skin with smooth edges\n",
-    "BCC: type of skin cancer, not melanoma\n",
-    "    - rolled edges, pearly appearance, and visible blood vessels\n",
-    "AK: pre-cancerous skin condition, not melanoma\n",
-    "    - rough, scaly patches on sun-exposed skin\n",
-    "BKL: benign skin lesions/skin growth, not cancerous\n",
-    "    - brown or black spots on the skin, often with irregular borders\n",
-    "DF: firm skin bumps, not cancerous\n",
-    "    - small, raised, and firm nodules that are usually brown or skin-colored\n",
-    "VASC: abnormal malformation of blood vessels, not cancerous\n",
-    "    - red or purple lesions on the skin, often with a raised appearance\n",
-    "SCC: type of skin cancer, not melanoma\n",
-    "    - scaly, crusted patches or open sores that do not heal\n",
-    "UNK: unc status\n",
-    "'''"
    ]
   },
   {
@@ -33833,7 +33738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -33858,7 +33763,6 @@
    ],
    "source": [
     "'''NEW UNDERSAMPLING'''\n",
-    "\n",
     "\n",
     "def undersample_data_proportional(df, target_size, new_labels_path):\n",
     "    df = pd.read_csv(training_labels_path)\n",
@@ -33909,33 +33813,23 @@
     "undersampled_training_labels_df = pd.read_csv(undersampled_training_labels)\n",
     "\n",
     "undersampled_filenames = undersampled_training_labels_df[\"image\"].tolist()\n",
-    "undersampled_filenames = [filename + \".jpg\" for filename in undersampled_filenames]\n",
-    "\n",
-    "#print(\"Undersampled training labels: \", undersampled_filenames[:5])\n",
-    "\n",
-    "\n"
+    "undersampled_filenames = [filename + \".jpg\" for filename in undersampled_filenames]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "'''FILTERING'''\n",
     "# Hair removal\n",
     "def remove_hair(img):\n",
-    "    #Black hat filter\n",
     "    kernel = cv2.getStructuringElement(cv2.MORPH_RECT,(7,17))\n",
     "    blackhat = cv2.morphologyEx(img, cv2.MORPH_BLACKHAT, kernel)\n",
-    "    #Gaussian filter\n",
     "    bhg= cv2.GaussianBlur(blackhat,(3,3),cv2.BORDER_DEFAULT)\n",
-    "    #Binary thresholding (MASK)\n",
     "    ret,mask = cv2.threshold(bhg,10,255,cv2.THRESH_BINARY)\n",
-    "    #Replace pixels of the mask\n",
     "    dst = cv2.inpaint(img,mask,7,cv2.INPAINT_TELEA)\n",
-    "    # plt.imshow(dst)\n",
-    "    # plt.show\n",
     "    return dst\n",
     "    \n",
     "# Gray scale\n",
@@ -33985,7 +33879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -34023,28 +33917,17 @@
     "    \n",
     "    contrast = enhance_contrast(noise_reduced)\n",
     "\n",
-    "    # Very wonky things happen depending on specific images when trying to get specific borders\n",
-    "    #mask = segment_lesion(image)   \n",
-    "    # borders = enhance_borders(noise_reduced)\n",
-    "    #final = cv2.bitwise_and(contrast, contrast, mask=mask)\n",
-    "\n",
     "    resized = cv2.resize(contrast, (224,224))\n",
     "    return resized\n",
     "\n",
     "def preprocess_all_images(image_list, output_dir):\n",
     "    if not os.path.exists(output_dir):\n",
-    "        print(\"Creating output directory\")\n",
     "        os.makedirs(output_dir)\n",
     "    elif os.path.exists(output_dir):\n",
-    "        print(\"Output directory already exists, deleting\")\n",
     "        shutil.rmtree(output_dir)\n",
     "        os.makedirs(output_dir)\n",
     "    \n",
-    "    i = 0\n",
-    "    for image_name in range(len(image_list)): # <------------------- Change for full dataset len(image_list)\n",
-    "        i += 1\n",
-    "        if i % 1000 == 0:\n",
-    "            print(f\"Preprocessing image {i}/{len(image_list)}\")\n",
+    "    for image_name in range(len(image_list)):\n",
     "        image_name = image_list[image_name]\n",
     "        image_path = os.path.join(training_path, image_name)\n",
     "        preprocessed_image = preprocessing(image_path)\n",
@@ -34052,7 +33935,6 @@
     "        cv2.imwrite(output_path, preprocessed_image)\n",
     "        \n",
     "    print(\"Total Preprocessed: \", i)\n",
-    "\n",
     "\n",
     "preprocess_all_images(undersampled_filenames, \"../preprocessed_images\")"
    ]
@@ -34093,49 +33975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'UNDERSAMPLING OLD ALGORITHM --> NEW ONE IS BEFORE PREPROCESSING\\n# Simple random undersampling to achieve desired balance\\n# random_state HH 88\\ndef undersample_data(df, majority_split, new_labels_path):\\n    majority = df[df[\"MEL\"] == 0]\\n    minority = df[df[\"MEL\"] == 1]\\n    # Calculate size\\n    # major_count = majority.shape[0]\\n    minor_count = minority.shape[0]\\n    size = int(minor_count // (1 - majority_split)) - minor_count\\n    majority_undersampled = resample(majority,\\n                                    replace=False,\\n                                    n_samples=size,\\n                                    random_state=88)\\n    df_undersampled = pd.concat([majority_undersampled, minority])\\n    df_ordered = df_undersampled.sort_values(by=\"image\").reset_index(drop=True)\\n    # print(df_ordered[df_ordered[\"MEL\"] == 0].shape[0])\\n    # print(df_ordered[df_ordered[\"MEL\"] == 1].shape[0])\\n    df_ordered.to_csv(new_labels_path, index=False)\\n    #print(len(df_ordered))\\nmajority_split = 0.5 # XX% majority (Non-Melanoma), XX% minority (Melanoma)\\nundersample_data(df_train_labels_updated, majority_split, \"../preprocessed_images/ISIC_2019_Training_GroundTruth_preprocessed.csv\")\\n'"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''UNDERSAMPLING OLD ALGORITHM --> NEW ONE IS BEFORE PREPROCESSING\n",
-    "# Simple random undersampling to achieve desired balance\n",
-    "# random_state HH 88\n",
-    "def undersample_data(df, majority_split, new_labels_path):\n",
-    "    majority = df[df[\"MEL\"] == 0]\n",
-    "    minority = df[df[\"MEL\"] == 1]\n",
-    "    # Calculate size\n",
-    "    # major_count = majority.shape[0]\n",
-    "    minor_count = minority.shape[0]\n",
-    "    size = int(minor_count // (1 - majority_split)) - minor_count\n",
-    "    majority_undersampled = resample(majority,\n",
-    "                                    replace=False,\n",
-    "                                    n_samples=size,\n",
-    "                                    random_state=88)\n",
-    "    df_undersampled = pd.concat([majority_undersampled, minority])\n",
-    "    df_ordered = df_undersampled.sort_values(by=\"image\").reset_index(drop=True)\n",
-    "    # print(df_ordered[df_ordered[\"MEL\"] == 0].shape[0])\n",
-    "    # print(df_ordered[df_ordered[\"MEL\"] == 1].shape[0])\n",
-    "    df_ordered.to_csv(new_labels_path, index=False)\n",
-    "    #print(len(df_ordered))\n",
-    "majority_split = 0.5 # XX% majority (Non-Melanoma), XX% minority (Melanoma)\n",
-    "undersample_data(df_train_labels_updated, majority_split, \"../preprocessed_images/ISIC_2019_Training_GroundTruth_preprocessed.csv\")\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -34190,11 +34030,9 @@
     "    new_label_rows = []\n",
     "    # new_file_num\n",
     "\n",
-    "    for image_name in all_melanoma[:]: # <------------------------------ Change for all_melanoma images \n",
+    "    for image_name in all_melanoma[:]:\n",
     "        image_name = image_name + \".jpg\"\n",
-    "        #print(\"Image name: \", image_name)\n",
     "        image = os.path.join(input_dir, image_name).replace(\"\\\\\", \"/\")\n",
-    "        #print(\"Image path: \", image)\n",
     "        if image_name.endswith(\".csv\"):\n",
     "            continue\n",
     "        \n",
@@ -34203,12 +34041,10 @@
     "            image = cv2.imread(image)\n",
     "            image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
     "        except Exception as e:\n",
-    "            print(f\"Image {image_name} likely does not exist in directory\")\n",
     "            continue\n",
     "        \n",
     "        # Augment image\n",
-    "        \n",
-    "        augmented_images = augment_image(image, transformation, num_augmentations) # len = num_augmentations\n",
+    "        augmented_images = augment_image(image, transformation, num_augmentations) \n",
     "        for i, aug_img in enumerate(augmented_images):\n",
     "            # Create new image name\n",
     "            new_image_name = f\"ISIC_00{new_file_num}\"\n",
@@ -34221,14 +34057,12 @@
     "\n",
     "            # Create new file path\n",
     "            new_filepath = os.path.join(output_dir, new_image_name+\".jpg\").replace(\"\\\\\", \"/\")\n",
-    "            # print(\"New filepath: \", new_filepath)\n",
     "            \n",
     "            # Save augmented images\n",
     "            cv2.imwrite(new_filepath, aug_img)\n",
     "\n",
     "            \n",
     "        \n",
-    "    # Write uodated labels to csv\n",
     "    print(\"New labels: \", len(new_label_rows))\n",
     "    df = pd.concat([df, pd.DataFrame(new_label_rows)], ignore_index=True)\n",
     "    df.to_csv(input_labels, index=False)\n",
@@ -34238,7 +34072,6 @@
     "# Get the newest file number from the original training labels file\n",
     "df = pd.read_csv(training_labels_path)\n",
     "new_file_num = int((df.tail(1)[\"image\"].values[0])[5:]) + 1\n",
-    "#print(new_file_num) # Get newest file number\n",
     "\n",
     "preprocessed_directory = \"../preprocessed_images\"\n",
     "augmented_directory = \"../augmented_images\"\n",
@@ -34246,28 +34079,13 @@
     "df = pd.read_csv(undersampled_training_labels)\n",
     "print(\"Size before :\", df.shape)\n",
     "\n",
-    "# augment_data(undersampled_training_labels, preprocessed_directory, preprocessed_directory, new_file_num, num_augmentations=1)\n",
+    "augment_data(undersampled_training_labels, preprocessed_directory, preprocessed_directory, new_file_num, num_augmentations=1)\n",
     "\n",
     "df = pd.read_csv(undersampled_training_labels)\n",
     "print(\"Size after :\", df.shape)\n",
     "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "73255\n"
-     ]
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
