--- a/model_training/himal_han.ipynb
+++ b/model_training/himal_han.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a5136d6d",
    "metadata": {},
    "outputs": [
@@ -54,8 +54,7 @@
     "from tensorflow.keras import layers, models\n",
     "from tensorflow.keras.preprocessing.image import load_img, img_to_array\n",
     "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
-    "import matplotlib.pyplot as plt\n",
-    "print(tf.__version__)"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -147,13 +146,10 @@
     "        layers.Dense(256, activation='relu'),\n",
     "        layers.BatchNormalization(),\n",
     "        layers.Dropout(0.5),\n",
-    "        # sigmoid here\n",
     "        layers.Dense(1, activation='sigmoid')\n",
     "    ])\n",
     "    \n",
-    "    return model\n",
-    "\n",
-    "\n"
+    "    return model\n"
    ]
   },
   {
@@ -345,12 +341,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "7df84d9c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save(\"../melanoma_experimental_model.keras\")"
+    "model.save(\"../melanoma_combo_model.keras\")"
    ]
   }
  ],
